--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -34,7 +34,7 @@
 							<header>
 								<h1>Hi. I'm <strong>Melissa Roby</strong>.</h1>
 							</header>
-							<p>And this is <strong>Miniport</strong>, a free, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
+							<p>And this is Miniport, a free, fully responsive HTML5 site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a> &amp; released under the <a href="http://html5up.net/license">CCA license</a>.</p>
 							<a href="#work" class="button large scrolly">Learn about what I do</a>
 						</div>
 					</div>
@@ -46,33 +46,33 @@
 				<div class="container">
 					<header>
 						<h2>Here's all the stuff I do.</h2>
-						<p>Odio turpis amet sed consequat eget posuere consequat.</p>
+						<p>Full Stack Web Development</p>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-comments"></span>
-								<h3>Consequat lorem</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>User Interface and Git</h3>
+								<p>Build user interfaces and use git affectively. Semantic HTML, box model, flex box, display types.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon solid featured fa-camera-retro"></span>
-								<h3>Lorem dolor tempus</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>Advanced CSS</h3>
+								<p>Responsive design. CSS styling for mobile devices to large tablets to small screens. Able to correctly deliver content to all mediums.</p>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class="icon featured fa-thumbs-up"></span>
-								<h3>Feugiat posuere</h3>
-								<p>Ornare nulla proin odio consequat sapien vestibulum ipsum primis sed amet consequat lorem dolore.</p>
+								<h3>HTML</h3>
+								<p>Use of semantic HTML tags to markup content.</p>
 							</section>
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<p>Want to see more?</p>
 						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
 					</footer>
 				</div>
@@ -83,7 +83,7 @@
 				<div class="container">
 					<header>
 						<h2>Here’s some stuff I made recently.</h2>
-						<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>
+						<!--<p>Proin odio consequat  sapien vestibulum consequat lorem dolore feugiat.</p>-->
 					</header>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
@@ -95,28 +95,28 @@
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/Biggie2.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/portland.jpg" alt="" /></a>
 								<h3><a href="https://github.com/inkedanomaly/UI-III-Flexbox/tree/melissa-roby">User Interface using Flexbox</a></h3>
 								<p>Refractored the home page layout with flexbox where inline-block was used before. Created the Services Page build using flexbox.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/beachdog.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/city.jpg" alt="" /></a>
 								<h3><a href="https://github.com/inkedanomaly/User-Interface/tree/melissa-roby">Great Idea Web Page</a></h3>
 								<p>Created a user interface from scratch based on a design file. Built a single page website using HTML and CSS. CSS was designed using only display:inline-block and box model CSS properties.</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/city.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/beachdog.jpg" alt="" /></a>
 								<h3><a href="#">More to come!</a></h3>
 								<!--p>Ornare nulla proin odio consequat.</!--p>-->
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/portland.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/Biggie2.jpg" alt="" /></a>
 								<h3><a href="#">More to come!</a></h3>
 								<!--p>Ornare nulla proin odio consequat.</!--p>-->
 							</article>
