added labels to form

--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -148,15 +148,19 @@
 							<form method="post" action="#">
 								<div class="row">
 									<div class="col-6 col-12-small">
+										<label class="name">Name</label>
 										<input type="text" name="name" id="name" placeholder="Name" />
 									</div>
 									<div class="col-6 col-12-small">
+										<label class="email">Email</label>
 										<input type="text" name="email" id="email" placeholder="Email" />
 									</div>
 									<div class="col-12">
+										<label class="subject">Subject</label>
 										<input type="text" name="subject" id="subject" placeholder="Subject" />
 									</div>
 									<div class="col-12">
+										<label class="message">Message</label>
 										<textarea name="message" id="message" placeholder="Message"></textarea>
 									</div>
 									<div class="col-12">
