--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -96,7 +96,7 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
 								<a href="#" class="image featured"><img src="images/portland.jpg" alt="" /></a>
-								<h3><a href="https://github.com/inkedanomaly/UI-III-Flexbox/tree/melissa-roby">User Interface using Flexbox</a></h3>
+								<h3><a href="https://github.com/inkedanomaly/UI-III-Flexbox/tree/melissa-roby">User Interface</a></h3>
 								<p>Refractored the home page layout with flexbox where inline-block was used before. Created the Services Page build using flexbox.</p>
 							</article>
 						</div>
